[gd_scene load_steps=29 format=3 uid="uid://cuhh0hwrrx7cl"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_rehx4"]
[ext_resource type="SpriteFrames" uid="uid://c24mkd3b8maf6" path="res://Animations/OdderfCharacterAnimations.tres" id="2_58gg8"]
[ext_resource type="Resource" uid="uid://dvcgp8wv06rd3" path="res://Inventory/PlayerInventory.tres" id="2_c4snw"]
[ext_resource type="SpriteFrames" uid="uid://bntq1tsx6kqk0" path="res://Animations/BaseCharacterToolAnimations.tres" id="3_x40a2"]
[ext_resource type="Shader" path="res://Shaders/PlayerUI.gdshader" id="4_x8anu"]
[ext_resource type="PackedScene" uid="uid://g77u3545jdbf" path="res://Scenes/UI/InventoryUI.tscn" id="6_t2xeh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7nc3s"]
radius = 3.0
height = 6.0

[sub_resource type="Animation" id="Animation_6ripm"]
resource_name = "AttackDown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackDown", &"IdleDown"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tools:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackDown", &"Idle"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 15)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vn1c3"]
resource_name = "AttackLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackLeft", &"IdleLeft"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tools:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackLeft", &"Idle"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_y7dfd"]
resource_name = "AttackRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackRight", &"IdleRight"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tools:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackRight", &"Idle"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_am5pm"]
resource_name = "AttackUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackUp", &"IdleUp"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tools:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"AttackUp", &"Idle"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -15)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_03e6f"]
resource_name = "IdleDown"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IdleDown"]
}

[sub_resource type="Animation" id="Animation_rlty4"]
resource_name = "IdleLeft"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IdleLeft"]
}

[sub_resource type="Animation" id="Animation_i5i0y"]
resource_name = "IdleRight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IdleRight"]
}

[sub_resource type="Animation" id="Animation_lq666"]
resource_name = "IdleUp"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IdleUp"]
}

[sub_resource type="Animation" id="Animation_h4pdy"]
resource_name = "WalkDown"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkDown"]
}

[sub_resource type="Animation" id="Animation_02heu"]
resource_name = "WalkLeft"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkLeft"]
}

[sub_resource type="Animation" id="Animation_yq73y"]
resource_name = "WalkRight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkRight"]
}

[sub_resource type="Animation" id="Animation_e2wlw"]
resource_name = "WalkUp"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"WalkUp"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7sn04"]
_data = {
"AttackDown": SubResource("Animation_6ripm"),
"AttackLeft": SubResource("Animation_vn1c3"),
"AttackRight": SubResource("Animation_y7dfd"),
"AttackUp": SubResource("Animation_am5pm"),
"IdleDown": SubResource("Animation_03e6f"),
"IdleLeft": SubResource("Animation_rlty4"),
"IdleRight": SubResource("Animation_i5i0y"),
"IdleUp": SubResource("Animation_lq666"),
"WalkDown": SubResource("Animation_h4pdy"),
"WalkLeft": SubResource("Animation_02heu"),
"WalkRight": SubResource("Animation_yq73y"),
"WalkUp": SubResource("Animation_e2wlw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1el8s"]
radius = 6.0
height = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sqf25"]
bg_color = Color(0.662745, 0.580392, 0.556863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_equbo"]
bg_color = Color(0.745098, 0.160784, 0.172549, 1)

[sub_resource type="Gradient" id="Gradient_ns6a8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.698039, 0.698039, 0.698039, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_70jis"]
gradient = SubResource("Gradient_ns6a8")

[sub_resource type="Gradient" id="Gradient_wd4tm"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.243137, 0.94902, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4jrn4"]
gradient = SubResource("Gradient_wd4tm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6x2g3"]
shader = ExtResource("4_x8anu")
shader_parameter/value = 100.0
shader_parameter/thickness = 54.731
shader_parameter/offset = 0.0
shader_parameter/smoothing = 5.0
shader_parameter/fg = SubResource("GradientTexture1D_4jrn4")
shader_parameter/bg = SubResource("GradientTexture1D_70jis")

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("inventory_ui") groups=["Player"]]
y_sort_enabled = true
texture_filter = 1
motion_mode = 1
script = ExtResource("1_rehx4")
speed = 75
inventory = ExtResource("2_c4snw")
inventory_ui = NodePath("InventoryUI")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_7nc3s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7sn04")
}
autoplay = "IdleDown"

[node name="Character" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_58gg8")
animation = &"IdleDown"
autoplay = "IdleDown"
frame_progress = 0.639189

[node name="Tools" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_x40a2")
animation = &"AttackUp"
autoplay = "Idle"
frame_progress = 0.55912

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -15)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1el8s")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -6.0
offset_top = 10.0
offset_right = 6.0
offset_bottom = 13.0
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_sqf25")
theme_override_styles/fill = SubResource("StyleBoxFlat_equbo")
max_value = 5.0
step = 1.0
value = 5.0
show_percentage = false

[node name="StaminaWheel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_6x2g3")
offset_left = 7.0
offset_top = -8.0
offset_right = 12.0
offset_bottom = -3.0

[node name="InventoryUI" parent="." instance=ExtResource("6_t2xeh")]
offset_left = -31.0
offset_top = -66.0
offset_right = 30.0
offset_bottom = -23.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
